[project]
name = "textual-fspicker"
version = "0.4.1"
description = "A simple Textual filesystem picker dialog library."
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "textual>=1.0.0",
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "License :: OSI Approved :: MIT License" }
keywords = [
    "terminal",
    "library",
    "file system",
    "filesystem",
    "dialog",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://blog.davep.org/textual-fspicker/"
Repository = "https://github.com/davep/textual-fspicker"
Documentation = "https://blog.davep.org/textual-fspicker/"
Source = "https://github.com/davep/textual-fspicker"
Issues = "https://github.com/davep/textual-fspicker/issues"
Discussions = "https://github.com/davep/textual-fspicker/discussions"

[build-system]
# https://github.com/astral-sh/rye/issues/1446
requires = ["hatchling==1.26.3", "hatch-vcs"]
# requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=4.0.1",
    "mypy>=1.14.1",
    "mkdocstrings[python]>=0.28.2",
    "mkdocs-material>=9.6.5",
    "ghp-import>=2.1.0",
    "ruff>=0.9.8",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/textual_fspicker"]
