[project]
name = "textual-fspicker"
version = "0.6.0"
description = "A simple Textual filesystem picker dialog library."
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "textual>=1.0.0",
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = [
    "terminal",
    "library",
    "file system",
    "filesystem",
    "dialog",
]
classifiers = [
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Terminals",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://textual-fspicker.davep.dev/"
Repository = "https://github.com/davep/textual-fspicker"
Documentation = "https://textual-fspicker.davep.dev/"
Source = "https://github.com/davep/textual-fspicker"
Issues = "https://github.com/davep/textual-fspicker/issues"
Discussions = "https://github.com/davep/textual-fspicker/discussions"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
managed = true
dev-dependencies = [
    "pre-commit>=4.0.1",
    "mypy>=1.14.1",
    "mkdocstrings[python]>=0.28.2",
    "mkdocs-material>=9.6.5",
    "ruff>=0.9.8",
    "codespell>=2.4.1",
    "ruff>=0.12.9",
]

[tool.pyright]
venvPath="."
venv=".venv"
exclude=[".venv"]
